[package]
name = "rs_client"
version = "0.1.0"
authors = ["r0x <r00txxyyzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h2 = "0.3.13"
tokio = { version = "1.4", features = ["rt", "rt-multi-thread"] }


